edited the database structure for item,brand,model,item_type,attribute_gorup,attribute
